--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,21 +30,23 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
     overflow: hidden;
 
     background-color: white;
     width: 260px;
     height: 500px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450); 
+    transform: translate(-50%, -50%);;
 }
 
 section#login > div#imagem {
     display: block;
-    background: #f7ae12 url(../imagens/gymlogin.jpg);
+    background: #f7ae12 url(../imagens/logogym.jpg);
     background-size: cover;
-    height: 200px;    
+    height: 200px;
+        
 }
 
 section#login > div#formulario {
@@ -58,5 +60,85 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #f7ae12;
+    border: 2px solid;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span {
+    color: black;
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #f7c455;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.camp > input:focus-within {
+    background-color: white;
+
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #f7c455;
+    color: black;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: #f7c455;
+    color: black;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: black;
+    color: white;
+}
+
+form > a.botao > span {
     font-size: 0.8em;
 }
